# personal-health-etl-pipeline

./: .gitignore  README.md  pyproject.toml  setup.py
.config/development/: .env.template
composer_dags/: cloudbuild.yaml
composer_dags/dags/: health_check_dag.py  oura_dag.py
composer_dags/dags/utils/data_sources/: __init__.py
composer_dags/dags/utils/data_sources/oura/: __init__.py
composer_dags/dags/utils/data_sources/oura/config/: config.py  constants.py
composer_dags/dags/utils/data_sources/oura/etl/: extract.py  load.py  transform.py
composer_dags/dags/utils/data_sources/oura/schemas/: oura_activity.json  oura_sleep.json
composer_dags/dags/utils/data_sources/oura/utils/: common_utils.py
data_sources/oura/config/: config.py  constants.py
data_sources/oura/configs/: oura_config.yaml
data_sources/oura/etl/: extract.py  load.py  transform.py
data_sources/oura/pipelines/: dataflow_pipeline.py
data_sources/oura/tests/: test_extract.py
data_sources/oura/utils/: common_utils.py
schemas/oura/: oura_activity.json  oura_day.json  oura_readiness.json  oura_sleep.json  t.json
scripts/: deploy.sh  destroy.sh  generate_env.sh  run_pipeline.py  truncate_oura_tables.sh
terraform/environments/development/: main.tf  outputs.tf  terraform.tfvars.template  tfplan  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/composer/: main.tf  outputs.tf  variables.tf
terraform/modules/dags/: main.tf  outputs.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
